    dragging-and-dropping files (in addition to the normal file-chooser setup)

  * Logging of page views (in the problemactions) can now be enabled by setting
    cs_log_page_views = True

  * Allow running via "python3 -m catsoop" in addition to "catsoop"

  * Added experimental support for running checkers on separate machines from
    the web server

CHANGED:

  * On the main page, links are now shown even to courses that can't be
    properly loaded, so that the underlying issue is easier to find (clicking
    on the link shows a more detailed error message)

  * Auto-generated csq_name fields now increment only for questions that don't
    have names specified (reverts a change from 2020.9.0)

  * The pythonic and pythonliteral question types now allow checking for valid
    formatting

  * Reverted changes to cslog module and how the checker queue process works

  * Logs now store information about file uploads in a more intuitive format

  * cs_upload_management returns as a way to control where uploaded files are
    stored (directly in the database, or as separate files)

  * Changed the location of the default remote sandbox for running Python code

  * Replaced csq_grading_mode="legacy" with csq_autograder_async flag, and made
    synchronous checking the default

DEPRECATED:

REMOVED:

  * Removed PostgreSQL as a logging mechanism

FIXED:

  * Fixed issue with reporter websocket connection being lost frequently

  * Fixed a crash related to multiprocessing on MacOS with Python 3.8

  * Fixed an issue with rendering inline code blocks split across multiple
    lines of Markdown

  * Attempted fix for rendering of the catsoop logo in the footer on
    iOS/Safari

  * Fixed a potential race condition in cslog.most_recent

SECURITY:

  * Logs are now encrypted by default

  * Remove information about the Python version from the default footer

DOCUMENTATION:

VENDORED SOFTWARE:

  * Upgraded KaTeX to version 0.13.13

  * Upgraded Twemoji to v13.1.0
